feat: reuse analyzed models and catalog rows between runs
A comparison threw away everything it had learned. Running it twice against
an unchanged project parsed and analyzed that project twice, and running it
twice against the same database re-read the same catalog twice.

Analyzed project models are now written to a persistent index and restored
on the next comparison when nothing in the project has changed, so a repeat
comparison becomes a read of that index instead of a full load. PostgreSQL
routine bodies and catalog rows get the same treatment against a database.

Correctness of a cache like this is entirely about what it is keyed by. Each
entry is keyed by a full SHA-256 fingerprint of the target and the session
identity, with full reader and query identities inside it, so an entry can
never be served to a target it was not built for.

The stored format is packed rather than plain serialization, which is what
makes it cheap enough to be worth keeping. Payloads are bounded at 32 MiB,
malformed entries with oversized nested arrays are rejected before anything
is allocated for them, and pruning does not block another local process
working on the same directory. A local filesystem is required; NFS and other
network filesystems are not supported.

The Core API is widened for the operations a persistent index needs, and
both the cache and the comparison report their own telemetry so that the
reuse can be observed rather than assumed.